Trabajando con el CSS

--- a/contacto.html
+++ b/contacto.html
@@ -4,16 +4,17 @@
 <head>
     <meta charset="UTF-8">
     <title>Contacto</title>
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 
 <body>
     <header class="header">
-        <h1 class="cabecero__actividad">INSTALACIONES FOTOVOLTAICAS</h1>
-        <h2 class="cabecero__nombre">EL TXISPAZO BARATO</h2>
         <ul class="header__lista">
             <li class="header__li"><a href="./index.html">Inicio</a></li>
             <li class="header__li"><a href="./contacto.html">Contacto</a></li>
         </ul>
+        <h1 class="cabecero__actividad">INSTALACIONES FOTOVOLTAICAS</h1>
+        <h2 class="cabecero__nombre">EL TXISPAZO BARATO</h2>
     </header>
     <div class="div__particulares">
         <h2>DATOS PARA PROYECTO PERSONALIZADO</h2>
@@ -44,6 +45,6 @@
             <li class="footer__li">&copy; Reservados derechos de autor</li>
         </ul>
     </footer>
+    <script src="./js/script.js"></script>
 </body>
-
 </html>
