--- a/index.html
+++ b/index.html
@@ -3,24 +3,24 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Document</title>
+    <title>Inicio</title>
     <link rel="stylesheet" href="./css/style.css">
 </head>
 
 <body>
     <header class="header">
-        <h1 class="cabecero__actividad">INSTALACIONES FOTOVOLTAICAS</h1>
-        <h2 class="cabecero__nombre">EL TXISPAZO BARATO</h2>
         <ul class="header__lista">
-            <li class="header__li"><a href="./index.html">Inicio</a></li>
-            <li class="header__li"><a href="./contacto.html">Contacto</a></li>
+            <li class="header__li"><a class="header__a" href="./index.html">Inicio</a></li>
+            <li class="header__li"><a class="header__a" href="./contacto.html">Contacto</a></li>
         </ul>
+        <h1 class="header__h1">INSTALACIONES FOTOVOLTAICAS</h1>
+        <h2 class="header__h2">EL TXISPAZO BARATO</h2>
     </header>
     <main class="main">
         <section class="main__section">
-            <article class="main__article"></article>
-            <article class="main__article"></article>
-            <article class="main__article"></article>
+            <article class="main__article main__paneles"></article>
+            <article class="main__article main__baterias"></article>
+            <article class="main__article main__transformadores"></article>
         </section>
     </main>
     <footer class="footer">
@@ -32,5 +32,4 @@
     </footer>
     <script src="./js/script.js"></script>
 </body>
-
 </html>
