--- a/contacto.html
+++ b/contacto.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Contacto</title>
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 
 <body>
@@ -18,11 +19,13 @@
     <div class="div__particulares">
         <h2>DATOS PARA PROYECTO PERSONALIZADO</h2>
         <form class="form_pariculares">
-            <input type="checkbox" name="chequeaqui" checked value="PARTICULARES">
+            <fieldset class="fieldset">
+            <input type="radio" name="chequeaqui" checked value="PARTICULARES">
             <label for="chequeaqui">PARTICULARES</label>
-            <input type="checkbox" name="chequeaqui" value="EMPRESAS">
+            <input type="radio" name="chequeaqui" value="EMPRESAS">
             <label for="chequeaqui">EMPRESAS</label>
-            <fieldset>
+            </fieldset>
+            <fieldset class="fieldset">
                 <label for="nombre">Nombre: </label>
                 <input type="text" name="Nombre" id="" placeholder="Nombre">
                 <label for="mail">Email: </label>
@@ -30,7 +33,7 @@
                 <label for="tipo">Tipo de instalación: </label>
                 <input type="text" name="asunto" id="" placeholder="Asunto">
             </fieldset>
-            <fieldset>
+            <fieldset class="fieldset">
                 <label for="mensaje">Mensaje: </label>
                 <textarea name="mensaje" id="" cols="80" rows="5"></textarea>
                 <input type="submit" value="Enviar">
@@ -44,6 +47,7 @@
             <li class="footer__li">&copy; Reservados derechos de autor</li>
         </ul>
     </footer>
+    <script src="./js/script.js"></script>
 </body>
 
 </html>
