--- a/index.html
+++ b/index.html
@@ -6,14 +6,17 @@
     <title>Inicio</title>
     <link rel="stylesheet" href="./css/style.css">
 </head>
+
 <body>
     <header class="header">
         <ul class="header__lista">
             <li class="header__li"><a class="header__a" href="./index.html">Inicio</a></li>
             <li class="header__li"><a class="header__a" href="./contacto.html">Contacto</a></li>
         </ul>
-        <h1 class="header__h1">INSTALACIONES FOTOVOLTAICAS</h1>
-        <h2 class="header__h2">EL TXISPAZO BARATO</h2>
+        <div class="header__h">
+            <h1 class="header__h1">EL TXISPAZO BARATO</h1>
+            <h2 class="header__h2">INSTALACIONES FOTOVOLTAICAS</h2>
+        </div>
     </header>
     <main class="main">
         <section class="main__section">
@@ -31,4 +34,5 @@
     </footer>
     <script src="./js/script.js"></script>
 </body>
+
 </html>
