--- a/contacto.html
+++ b/contacto.html
@@ -10,11 +10,13 @@
 <body>
     <header class="header">
         <ul class="header__lista">
-            <li class="header__li"><a href="./index.html">Inicio</a></li>
-            <li class="header__li"><a href="./contacto.html">Contacto</a></li>
+            <li class="header__li"><a class="header__a" href="./index.html">Inicio</a></li>
+            <li class="header__li"><a class="header__a" href="./contacto.html">Contacto</a></li>
         </ul>
-        <h1 class="cabecero__actividad">INSTALACIONES FOTOVOLTAICAS</h1>
-        <h2 class="cabecero__nombre">EL TXISPAZO BARATO</h2>
+        <div class="header__h">
+            <h1 class="header__h1">INSTALACIONES FOTOVOLTAICAS</h1>
+            <h2 class="header__h2">EL TXISPAZO BARATO</h2>
+        </div>
     </header>
     <div class="div__particulares">
         <h2>DATOS PARA PROYECTO PERSONALIZADO</h2>
