Añadiendo carrito de la compra

--- a/contacto.html
+++ b/contacto.html
@@ -10,9 +10,11 @@
 
 <body>
     <header class="header">
+        
         <ul class="header__lista">
             <li class="header__li"><a class="header__a" href="./index.html">Inicio</a></li>
             <li class="header__li"><a class="header__a" href="./contacto.html">Contacto</a></li>
+            <li class="header__li"><a class="header__a" href="#"><i class="fa-sharp fa-solid fa-cart-arrow-down"></i></a></li>
         </ul>
         <div class="header__h">
             <h1 class="header__h1">INSTALACIONES FOTOVOLTAICAS</h1>
