--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <title>Inicio</title>
     <link rel="stylesheet" href="./css/style.css">
+    <script src="https://kit.fontawesome.com/a184aa559c.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -12,6 +13,7 @@
         <ul class="header__lista">
             <li class="header__li"><a class="header__a" href="./index.html">Inicio</a></li>
             <li class="header__li"><a class="header__a" href="./contacto.html">Contacto</a></li>
+            <li class="header__li"><a class="header__a" href="#"><i class="fa-sharp fa-solid fa-cart-arrow-down"></i></a></li>
         </ul>
         <div class="header__h">
             <h1 class="header__h1">EL TXISPAZO BARATO</h1>
